<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/Option_All"
        android:title="@string/Option_Records"
        android:icon="@drawable/records_icon"
        />

    <item
        android:id="@+id/Option_Settings"
        android:title="@string/Option_Settings"
        android:icon="@drawable/settings_icon"
        />

    <item
        android:id="@+id/Option_Info"
        android:title="@string/Option_Info"
        android:icon="@drawable/info_icon"
        />

    <item
        android:id="@+id/Option_Exit"
        android:title="@string/Option_Exit"
        android:icon="@drawable/exit_icon"
        />


</menu>