<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.computacionmovil.securebox.Detalle.Detalle_registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="informacion.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <!--Desarrollador-->
        <TextView
            android:text="@string/DesarrolladorTXT"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunitosans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Correo contacto-->
        <TextView
            android:text="@string/AsignaturaTXT"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunitosans_italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Versión-->
        <TextView
            android:text="@string/VersionTXT"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunitosans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <Button
            android:id="@+id/Ir_github_web"
            android:text="@string/Ir_github"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunitosans_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>